feat: 一些优化小改动

--- a/public/index.html
+++ b/public/index.html
@@ -343,7 +343,7 @@ html.tab-logs .tab[data-tab="logs"] {
                                          <textarea name="SYSTEM_INSTRUCTION" rows="3" placeholder="反代系统提示词（如萌萌）"></textarea>
                                      </div>
                                      <div class="form-group compact">
-                                         <label>官方系统提示词 <span class="help-tip" data-tooltip="反重力官方要求的系统提示词">?</span></label>
+                                         <label>官方系统提示词 <span class="help-tip" data-tooltip="反重力官方要求的系统提示词（建议留空）">?</span></label>
                                          <textarea name="OFFICIAL_SYSTEM_PROMPT" rows="5" placeholder="官方系统提示词"></textarea>
                                      </div>
                                     </div>
